--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <link rel="stylesheet" href="css/flickity.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+
+
 </head>
 
 <body>
@@ -179,28 +182,21 @@
                     <h4>The collective</h4>
                 </div>
                 <div class="col-md-9">
-                    <p>8-bit aesthetic kitsch 90's humblebrag. Gastropub tacos hoodie letterpress, banjo normcore trust fund
-                        hella. Kinfolk gluten-free lo-fi quinoa. Pabst kitsch ennui hoodie meggings banjo. Schlitz tacos
-                        kitsch godard before they sold out. Kale chips chillwave kickstarter photo booth cronut cold-pressed.
-                        Banjo fixie umami kombucha affogato gluten-free authentic slow-carb hashtag, hammock pour-over chambray
-                        viral VHS normcore.</p>
+                    <p>8-bit aesthetic kitsch 90's humblebrag. Gastropub tacos hoodie letterpress, banjo normcore trust fund hella. Kinfolk gluten-free lo-fi quinoa. Pabst kitsch ennui hoodie meggings banjo. Schlitz tacos kitsch godard before they sold out.
+                        Kale chips chillwave kickstarter photo booth cronut cold-pressed. Banjo fixie umami kombucha affogato gluten-free authentic slow-carb hashtag, hammock pour-over chambray viral VHS normcore.</p>
                     <div class="video-player">
-                        <video id="video_synth" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="auto" width="568" height="300"
-                            poster="img/video-cover.jpg" data-setup='{}'>
+                        <video id="video_synth" class="video-js vjs-default-skin vjs-big-play-centered" controls preload="auto" width="568" height="300" poster="img/video-cover.jpg" data-setup='{}'>
                             <source src="http://vjs.zencdn.net/v/oceans.mp4" type="video/mp4" />
                             <source src="http://vjs.zencdn.net/v/oceans.webm" type="video/webm" />
                             <source src="http://vjs.zencdn.net/v/oceans.ogv" type="video/ogg" />
                             <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that
-                                <a
-                                    href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+                                <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
                             </p>
                         </video>
                     </div>
-                    <p>8-bit aesthetic kitsch 90's humblebrag. Gastropub tacos hoodie letterpress, banjo normcore trust fund
-                        hella. Kinfolk gluten-free lo-fi quinoa. </p>
-                    <p>Pabst kitsch ennui hoodie meggings banjo. Schlitz tacos kitsch godard before they sold out. Kale chips
-                        chillwave kickstarter photo booth cronut cold-pressed. Banjo fixie umami kombucha affogato gluten-free
-                        authentic slow-carb hashtag, hammock pour-over chambray viral VHS normcore.</p>
+                    <p>8-bit aesthetic kitsch 90's humblebrag. Gastropub tacos hoodie letterpress, banjo normcore trust fund hella. Kinfolk gluten-free lo-fi quinoa. </p>
+                    <p>Pabst kitsch ennui hoodie meggings banjo. Schlitz tacos kitsch godard before they sold out. Kale chips chillwave kickstarter photo booth cronut cold-pressed. Banjo fixie umami kombucha affogato gluten-free authentic slow-carb hashtag,
+                        hammock pour-over chambray viral VHS normcore.</p>
                 </div>
             </div>
         </div>
@@ -417,8 +413,7 @@
                             <figure>
                                 <figcaption>
                                     <h2>8 solid tips when working with front-end developers</h2>
-                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient
-                                        suspendisse ad rhoncus...</p>
+                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient suspendisse ad rhoncus...</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -441,8 +436,7 @@
                             <figure>
                                 <figcaption>
                                     <h2>The 10 best traits of a awesome design leaders</h2>
-                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient
-                                        suspendisse ad rhoncus...</p>
+                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient suspendisse ad rhoncus...</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -465,8 +459,7 @@
                             <figure>
                                 <figcaption>
                                     <h2>How to design well collaboratively with an agile product team</h2>
-                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient
-                                        suspendisse ad rhoncus...</p>
+                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient suspendisse ad rhoncus...</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -491,8 +484,7 @@
                             <figure>
                                 <figcaption>
                                     <h2>The essentials of modern interaction design (mobile + tablet)</h2>
-                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient
-                                        suspendisse ad rhoncus...</p>
+                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient suspendisse ad rhoncus...</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -515,8 +507,7 @@
                             <figure>
                                 <figcaption>
                                     <h2>Overcoming barriers encountered in the pitch process (part 1)</h2>
-                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient
-                                        suspendisse ad rhoncus...</p>
+                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient suspendisse ad rhoncus...</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -539,8 +530,7 @@
                             <figure>
                                 <figcaption>
                                     <h2>10 things we've learnt about our users (Case Study)</h2>
-                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient
-                                        suspendisse ad rhoncus...</p>
+                                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient suspendisse ad rhoncus...</p>
                                 </figcaption>
                             </figure>
                         </a>
@@ -572,16 +562,12 @@
             </div>
             <div class="row">
                 <div class="col-md-6 content-left">
-                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient suspendisse ad
-                        rhoncus cursus ut parturient viverra elit aliquam ultrices est sem. Tellus nam ad fermentum ac enim
-                        est duis facilisis congue a lacus adipiscing consequat risus consectetur scelerisque integer suspendisse
-                        a mus integer elit.</p>
+                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient suspendisse ad rhoncus cursus ut parturient viverra elit aliquam ultrices est sem. Tellus nam ad fermentum ac enim est duis facilisis congue a lacus
+                        adipiscing consequat risus consectetur scelerisque integer suspendisse a mus integer elit.</p>
                 </div>
                 <div class="col-md-6 content-right">
-                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient suspendisse ad
-                        rhoncus cursus ut parturient viverra elit aliquam ultrices est sem. Tellus nam ad fermentum ac enim
-                        est duis facilisis congue a lacus adipiscing consequat risus consectetur scelerisque integer suspendisse
-                        a mus integer elit.</p>
+                    <p>A posuere donec senectus suspendisse bibendum magna ridiculus a justo orci parturient suspendisse ad rhoncus cursus ut parturient viverra elit aliquam ultrices est sem. Tellus nam ad fermentum ac enim est duis facilisis congue a lacus
+                        adipiscing consequat risus consectetur scelerisque integer suspendisse a mus integer elit.</p>
                 </div>
             </div>
         </div>
@@ -712,10 +698,43 @@
     <section class="get-started has-padding text-center" id="get-started">
         <div class="container">
             <div class="row">
-                <div class="col-md-12 wp4">
-                    <h2>Get started now. Download Synthetica
-                        <a href="http://tympanus.net/codrops/?p=26570">FREE</a>, via Codrops.</h2>
-                    <a href="http://tympanus.net/codrops/?p=26570" class="btn secondary-white">Get started</a>
+                <div class="col-md-4 col-md-offset-4 col-sm-12 col-xs-12">
+                    <form method="post" class="form-contact">
+                        <div class="header-form">
+                            CONTÁCTANOS
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label requiredField" for="nombre">
+                                Nombre
+                            </label>
+                            <input class="form-control" id="nombre" name="nombre" type="text" />
+                        </div>
+                        <div class="form-group ">
+                            <label class="control-label requiredField" for="email">
+                                Correo electr&oacute;nico
+                            </label>
+                            <input class="form-control" id="email" name="email" type="text" />
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="asunto">
+                                Asunto
+                            </label>
+                            <input class="form-control" id="asunto" name="asunto" type="text" />
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label requiredField" for="mensaje">
+                                Mensaje
+                            </label>
+                            <textarea class="form-control" cols="40" id="mensaje" name="mensaje" rows="5"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <div class="form-footer">
+                                <button class="btn btn-primary" name="submit" type="submit">
+                                    ENVIAR
+                                </button>
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
@@ -725,69 +744,24 @@
     <footer class="has-padding footer-bg">
         <div class="container">
             <div class="row">
-                <div class="col-md-4 footer-branding">
-                    <img class="footer-branding-logo" src="img/synthetica-logo.png" alt="Synthetica freebie html5 css3 template logo">
-                    <p>A free website template created exclusively for
-                        <a href="http://tympanus.net/codrops/">
-                            <em>Codrops</em>
-                        </a>
-                    </p>
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-md-12 footer-nav">
                     <ul class="footer-primary-nav">
                         <li>
-                            <a href="#intro">The Collective</a>
+                            <i class="fas fa-map-marker-alt"></i> Dirección: Calle 127 b No 46-26
                         </li>
                         <li>
-                            <a href="#team">The Crew</a>
+                            <i class="fas fa-mobile-alt"></i>Celular: 3173310073
                         </li>
                         <li>
-                            <a href="#articles">Articles</a>
-                        </li>
-                        <li>
-                            <a href="#freebies">Freebies</a>
-                        </li>
-                        <li>
-                            <a href="#">Subscribe</a>
+                            <i class="fas fa-envelope"></i>Email: Lilian.torres@grandpas.com.co
                         </li>
                     </ul>
-                    <ul class="footer-share">
-                        <li>
-                            <a href="http://tympanus.net/codrops/licensing/">Licence</a>
-                        </li>
-                        <li>
-                            <a href="#" class="share-trigger">
-                                <i class="fa fa-share"></i>Share</a>
-                        </li>
-                    </ul>
-                    <div class="share-dropdown">
-                        <ul>
-                            <li>
-                                <a href="#" class="share-twitter">
-                                    <i class="fa fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="share-facebook">
-                                    <i class="fa fa-facebook"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#" class="share-linkedin">
-                                    <i class="fa fa-linkedin"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
+
                     <ul class="footer-secondary-nav">
                         <li>
-                            <p>A free website template created exclusively for
-                                <a href="http://tympanus.net/codrops/">
-                                    <em>Codrops</em>
-                                </a>
-                            </p>
+                            <a href="http://www.grandpas.com.co">
+                                <em>www.grandpas.com.co</em>
+                            </a>
                         </li>
                     </ul>
                 </div>
@@ -810,25 +784,7 @@
     <script src="js/min/jquery.waypoints.min.js"></script>
     <script src="js/min/flickity.pkgd.min.js"></script>
     <script src="js/min/scripts-min.js"></script>
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID and uncomment -->
-    <!--
-	<script>
-	(function(b, o, i, l, e, r) {
-		b.GoogleAnalyticsObject = l;
-		b[l] || (b[l] =
-			function() {
-				(b[l].q = b[l].q || []).push(arguments)
-			});
-		b[l].l = +new Date;
-		e = o.createElement(i);
-		r = o.getElementsByTagName(i)[0];
-		e.src = '//www.google-analytics.com/analytics.js';
-		r.parentNode.insertBefore(e, r)
-	}(window, document, 'script', 'ga'));
-	ga('create', 'UA-XXXXX-X', 'auto');
-	ga('send', 'pageview');
-	</script>
-	-->
+
 </body>
 
 </html>
