--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <link rel="stylesheet" href="css/flickity.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+        crossorigin="anonymous">
 
 
 </head>
@@ -176,6 +177,51 @@
     </header>
 
 
+    <!-- SECTION: NUESTRO COMPROMISO -->
+    <div class="compromiso has-padding">
+        <div class="container text-center">
+            <div class="row">
+                <div class="col-md-5 col-md-offset-1 comp-img">
+                    <img src="img/hogar.png" alt="Grand Pas">
+                </div>
+                <div class="col-md-6">
+                    <h2> NUESTRO COMPROMISO </h2>
+                    <P>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, veritatis deserunt nemo consequatur eligendi consequuntur
+                        modi omnis, error sapiente repellat perspiciatis. Nemo natus eveniet repellendus quas porro unde
+                        fugiat voluptas!
+                    </P>
+                    <p>
+                        Eligendi consequuntur modi omnis, error sapiente repellat perspiciatis. Nemo natus eveniet repellendus quas porro unde fugiat
+                        voluptas!
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- SECTION: END  NUESTRO COMPROMISO -->
+
+    <!-- SECTION: LOGRANDO -->
+    <div class="logrando has-padding">
+        <div class="box-logrando">
+            <div class="header-box-logrando">
+                <h2>
+                    LOESTAMOS LOGRANDO
+                </h2>
+                <P>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur a, nam quibusdam deleniti delectus ducimus hic commodi
+                    explicabo est laboriosam, repellendus saepe inventore maxime assumenda repellat autem laudantium cum
+                    sed!
+                </P>
+            </div>
+        </div>
+    </div>
+    <!-- SECTION: END LOGRANDO -->
+
+
     <!-- SECTION: SERVICIOS  -->
     <div class="servicios has-padding">
         <div class="container text-center">
@@ -185,20 +231,40 @@
                 </h2>
 
                 <p>
-                    En nuestro Hogar se realizan diferentes actividades, con el objetivo primordial de mantener la mente ocupada en labores creativas que faciliten la comunicación e interacción .
+                    En nuestro Hogar se realizan diferentes actividades, con el objetivo primordial de mantener la mente ocupada en labores creativas
+                    que faciliten la comunicación e interacción .
                 </p>
                 <p>
-                    Diversas opciones para que cada día tenga incentivos distintos de aprendizaje. Manualidades ( Papel, cerámica, arcilla, pintura, etc) ,ejercicios físicos, danza , técnicas de respiración, relajación, yoga, spa y salón de belleza, aromaterapia, gastronomía,
-                    santa misa, salida al parque, juegos ( bingo, ajedrez, parkes, cartas etc), apoyo tecnológico ( manejo básico de internet y celular), celebraciones especiales ( Día de la familia, Día de los abuelos, Día del padre, de la Madre, Navidad,
-                    Amor y Amistad).
+                    Diversas opciones para que cada día tenga incentivos distintos de aprendizaje. Manualidades ( Papel, cerámica, arcilla, pintura,
+                    etc) ,ejercicios físicos, danza , técnicas de respiración, relajación, yoga, spa y salón de belleza,
+                    aromaterapia, gastronomía, santa misa, salida al parque, juegos ( bingo, ajedrez, parkes, cartas etc),
+                    apoyo tecnológico ( manejo básico de internet y celular), celebraciones especiales ( Día de la familia,
+                    Día de los abuelos, Día del padre, de la Madre, Navidad, Amor y Amistad).
                 </p>
                 <p>
 
                 </p>
                 <ul>
                     <li>
-                        - Cómodo alojamiento en unidades habitacionales seguras y con el cumplimiento de la normatividad. - Cinco comidas (Desayuno, medias nueves, almuerzo, onces y cena dependiendo de la dieta indicada por le nutricionista). - Servicio de Enfermería 24 Horas.
-                        - Consulta Médica mensual y seguimiento. - Consulta Trimestral por Nutrición. - Fisioterapia. - Terapia Ocupacional entre otras.
+                        - Cómodo alojamiento en unidades habitacionales seguras y con el cumplimiento de la normatividad.
+                    </li>
+                    <li>
+                        - Cinco comidas (Desayuno, medias nueves, almuerzo, onces y cena dependiendo de la dieta indicada por le nutricionista).
+                    </li>
+                    <li>
+                        - Servicio de Enfermería 24 Horas.
+                    </li>
+                    <li>
+                        - Consulta Médica mensual y seguimiento.
+                    </li>
+                    <li>
+                        - Consulta Trimestral por Nutrición.
+                    </li>
+                    <li>
+                        - Fisioterapia.
+                    </li>
+                    <li>
+                        - Terapia Ocupacional entre otras.
                     </li>
                 </ul>
                 <p>
@@ -213,26 +279,20 @@
     </div>
 
     <div class="servicios-op has-padding">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-12 col-md-offset-8">
-                    <div class="box-serv-op">
-                        <h2>SERVICIOS</h2>
-                        <h2>OPCIONALES</h2>
-                        <ul>
-                            <li>
-                                Acompañamiento a diligencias (Bancos, Citas Médicas, Otros).
-                            </li>
-                            <li>
-                                Salidas Ecológicas
-                            </li>
-                            <li>
-                                Pasadía (actividad diaria opcional para los no residentes con o sin transporte).
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+        <div class="box-serv-op">
+            <h2>SERVICIOS</h2>
+            <h2>OPCIONALES</h2>
+            <ul>
+                <li>
+                    Acompañamiento a diligencias (Bancos, Citas Médicas, Otros).
+                </li>
+                <li>
+                    Salidas Ecológicas
+                </li>
+                <li>
+                    Pasadía (actividad diaria opcional para los no residentes con o sin transporte).
+                </li>
+            </ul>
         </div>
     </div>
     <!-- END SECTION: SERVICIOS  -->
