--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
     <link rel="stylesheet" href="css/flickity.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
 
 
 </head>
@@ -66,19 +65,19 @@
                     <nav>
                         <ul class="primary-nav">
                             <li>
-                                <a href="#intro">INICIO</a>
+                                <a href="#">INICIO</a>
                             </li>
                             <li>
-                                <a href="#team">QUIÉNES SOMOS</a>
+                                <a href="#somos">QUIÉNES SOMOS</a>
                             </li>
                             <li>
-                                <a href="#articles">SERVICIOS</a>
+                                <a href="#servicios">SERVICIOS</a>
                             </li>
                             <li>
-                                <a href="#freebies">INSTALACIONES</a>
+                                <a href="#instalaciones">INSTALACIONES</a>
                             </li>
                             <li>
-                                <a href="#freebies">CONTACTO</a>
+                                <a href="#contacto">CONTACTO</a>
                             </li>
                         </ul>
                     </nav>
@@ -114,55 +113,27 @@
     </div>
     <header class="hero">
         <div class="carousel js-flickity">
-            <div class="carousel-cell" style="background-image: url(img/hero-bg-01.jpg);">
+            <div class="carousel-cell" style="background-image: url(img/slide1.jpg);">
                 <div class="hero-bg">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12 text-center">
-                                <h1 class="wp1">Introducing, Synthetica. A blissful HTML5/CSS3 Template, free forever.</h1>
-                                <a href="#intro" class="btn primary wp2">Learn more</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-8 col-md-offset-2 hero-intro-text wp3">
-                                <p>Synthetica is a
-                                    <span class="bold italic">FREE</span>, HTML5/CSS3 template available for download exclusively via Codrops. </p>
-                            </div>
-                        </div>
+                    <div>
+                        <h1 class="wp1">
+                            HOGAR DE ABUELOS
+                        </h1>
+                    </div>
+                    <div class="hero-intro-text wp2">
+                        <p>En el aprendizaje está la vida <br> y en el amor la felicidad.</p>
                     </div>
                 </div>
             </div>
-            <div class="carousel-cell" style="background-image: url(img/hero-bg-02.jpg);">
+            <div class="carousel-cell" style="background-image: url(img/slide1.jpg);">
                 <div class="hero-bg">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12 text-center">
-                                <h1 class="wp1">Get a head start, with the Synthetica Sketch file.</h1>
-                                <a href="http://tympanus.net/codrops/?p=26570" class="btn primary wp2">Download Sketch File</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-8 col-md-offset-2 hero-intro-text wp3">
-                                <p>Create your landing page in minutes with Synthetica's Sketch style guide.</p>
-                            </div>
-                        </div>
+                    <div>
+                        <h1 class="wp1" style="margin-left: 70px">
+                            HOGAR DE ABUELOS
+                        </h1>
                     </div>
-                </div>
-            </div>
-            <div class="carousel-cell" style="background-image: url(img/hero-bg-03.jpg);">
-                <div class="hero-bg">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-12 text-center">
-                                <h1 class="wp1">Download Synthetica today, it's free forever.</h1>
-                                <a href="http://tympanus.net/codrops/?p=26570" class="btn primary wp2">Download Template</a>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-8 col-md-offset-2 hero-intro-text wp3">
-                                <p>Available exclusively from Codrops.</p>
-                            </div>
-                        </div>
+                    <div class="hero-intro-text wp2">
+                        <p>En el aprendizaje está la vida <br> y en el amor la felicidad.</p>
                     </div>
                 </div>
             </div>
@@ -178,43 +149,40 @@
 
 
     <!-- SECTION: NUESTRO COMPROMISO -->
+    <div class="text-center">
+        <img src="img/linea.png" alt="" width="1px" height="44px" />
+    </div>
+
     <div class="compromiso has-padding">
-        <div class="container text-center">
+        <div class="container text-center" id="somos">
             <div class="row">
-                <div class="col-md-5 col-md-offset-1 comp-img">
+                <div class="col-md-5 col-md-offset-1 comp-img wp3">
                     <img src="img/hogar.png" alt="Grand Pas">
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 comp-text wp4">
                     <h2> NUESTRO COMPROMISO </h2>
                     <P>
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, veritatis deserunt nemo consequatur eligendi consequuntur
-                        modi omnis, error sapiente repellat perspiciatis. Nemo natus eveniet repellendus quas porro unde
-                        fugiat voluptas!
+                        El hogar <strong>Grandpa's</strong> es un lugar donde buscamos hacer placentera y felíz la <b><em>vida</em></b> de las personas mayores a través de una convivencia sana y compartida, con espacios adecuados para ellos, actividades físicas y recreativas, nutrición balanceada y aprendizaje
+                        permanente. Contamos con equipos profesionales, expertos y capacitados, con calidez humana excepcional para brindar el mejor servicio a nuestros residentes.
                     </P>
                     <p>
-                        Eligendi consequuntur modi omnis, error sapiente repellat perspiciatis. Nemo natus eveniet repellendus quas porro unde fugiat
-                        voluptas!
+                        Trabajamos en aumentar el grado de felicidad y motivación de las personas mayores, a través de un equipo joven, profesional y humano, enfocado en mejorar la calidad de vida y el bienestar emocional, físico y espiritual.
                     </p>
                 </div>
             </div>
         </div>
     </div>
-
-
-
     <!-- SECTION: END  NUESTRO COMPROMISO -->
 
     <!-- SECTION: LOGRANDO -->
-    <div class="logrando has-padding">
-        <div class="box-logrando">
+    <div class="logrando has-padding wp5">
+        <div class="box-logrando wp6">
             <div class="header-box-logrando">
                 <h2>
-                    LOESTAMOS LOGRANDO
+                    LO ESTAMOS LOGRANDO
                 </h2>
                 <P>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur a, nam quibusdam deleniti delectus ducimus hic commodi
-                    explicabo est laboriosam, repellendus saepe inventore maxime assumenda repellat autem laudantium cum
-                    sed!
+                    Ser reconocidos a nivel local, como una de las mejores alternativas de Hogar para las personas mayores, donde el aprendizaje y la sana recreación e innovación constante generen resultados motivadores para la construcción de una sociedad más feliz.
                 </P>
             </div>
         </div>
@@ -223,23 +191,20 @@
 
 
     <!-- SECTION: SERVICIOS  -->
-    <div class="servicios has-padding">
-        <div class="container text-center">
-            <div class="box-serv">
+    <div class="servicios has-padding wp7">
+        <div class="container text-center" id="servicios">
+            <div class="box-serv wp8">
                 <h2>
                     NUESTROS SERVICIOS
                 </h2>
 
                 <p>
-                    En nuestro Hogar se realizan diferentes actividades, con el objetivo primordial de mantener la mente ocupada en labores creativas
-                    que faciliten la comunicación e interacción .
+                    En nuestro Hogar se realizan diferentes actividades, con el objetivo primordial de mantener la mente ocupada en labores creativas que faciliten la comunicación e interacción .
                 </p>
                 <p>
-                    Diversas opciones para que cada día tenga incentivos distintos de aprendizaje. Manualidades ( Papel, cerámica, arcilla, pintura,
-                    etc) ,ejercicios físicos, danza , técnicas de respiración, relajación, yoga, spa y salón de belleza,
-                    aromaterapia, gastronomía, santa misa, salida al parque, juegos ( bingo, ajedrez, parkes, cartas etc),
-                    apoyo tecnológico ( manejo básico de internet y celular), celebraciones especiales ( Día de la familia,
-                    Día de los abuelos, Día del padre, de la Madre, Navidad, Amor y Amistad).
+                    Diversas opciones para que cada día tenga incentivos distintos de aprendizaje. Manualidades ( Papel, cerámica, arcilla, pintura, etc) ,ejercicios físicos, danza , técnicas de respiración, relajación, yoga, spa y salón de belleza, aromaterapia, gastronomía,
+                    santa misa, salida al parque, juegos ( bingo, ajedrez, parqués, cartas etc), apoyo tecnológico ( manejo básico de internet y celular), celebraciones especiales ( Día de la familia, Día de los abuelos, Día del padre, de la Madre, Navidad,
+                    Amor y Amistad).
                 </p>
                 <p>
 
@@ -249,7 +214,7 @@
                         - Cómodo alojamiento en unidades habitacionales seguras y con el cumplimiento de la normatividad.
                     </li>
                     <li>
-                        - Cinco comidas (Desayuno, medias nueves, almuerzo, onces y cena dependiendo de la dieta indicada por le nutricionista).
+                        - Cinco comidas (Desayuno, medias nueves, almuerzo, onces y cena dependiendo de la dieta indicada por el nutricionista).
                     </li>
                     <li>
                         - Servicio de Enfermería 24 Horas.
@@ -268,7 +233,7 @@
                     </li>
                 </ul>
                 <p>
-                    Disfruta de nuestras remodeladas , cómodas y seguras habitaciones.
+                    Disfruta de nuestras remodeladas, cómodas y seguras habitaciones.
                 </p>
                 <p>
                     Agradables zonas comunes que facilitan el esparcimiento y disfrute de los residentes.
@@ -278,8 +243,8 @@
         </div>
     </div>
 
-    <div class="servicios-op has-padding">
-        <div class="box-serv-op">
+    <div class="servicios-op has-padding wp9">
+        <div class="box-serv-op wp10">
             <h2>SERVICIOS</h2>
             <h2>OPCIONALES</h2>
             <ul>
@@ -300,30 +265,30 @@
 
     <!-- SECTION: INSTALACIONES -->
     <div class="instalaciones has-padding">
-        <div class="container text-center">
+        <div class="container text-center" id="instalaciones">
             <h2>NUESTRAS
                 <br> INSTALACIONES</h2>
-            <img src="img/plano_instalaciones.jpg" alt="Instalaciones">
+            <img class="wp11" src="img/plano_instalaciones.jpg" alt="Instalaciones">
         </div>
     </div>
     <!-- END SECTION: INSTALACIONES  -->
 
 
     <!-- SECTION: NUESTROS VALORES -->
-    <div class="stats has-padding">
-        <div class="container text-center">
+    <div class="stats has-padding wp12">
+        <div class="container text-center wp13">
             <h2>NUESTROS VALORES</h2>
             <ul class="valores_lista">
                 <li>
-                    <b>Felicidad:</b> el valor más anhelado por la humanidad y que busca que estemos satisfechos con nuestras
+                    <b>Felicidad:</b> El valor más anhelado por la humanidad y que busca que estemos satisfechos con nuestras
                     <br> vidas y el mundo que habitamos.
                 </li>
                 <li>
-                    <b>Respeto:</b> valorar las condiciones de aquellos que han vivido más y reconocer, aceptar y apreciar
+                    <b>Respeto:</b> Valorar las condiciones de aquellos que han vivido más y reconocer, aceptar y apreciar
                     <br> sus cualidades y derechos.
                 </li>
                 <li>
-                    <b>Humanidad:</b> manifestación de la condición humana para compartir con nuestros semejantes de
+                    <b>Humanidad:</b> Manifestación de la condición humana para compartir con nuestros semejantes de
                     <br> manera generosa y posibilitar así la convivencia, la paz y el desarrollo de la sociedad.
                 </li>
                 <li>
@@ -337,8 +302,8 @@
 
 
     <!-- SECTION: CONTACTO -->
-    <section class="get-started has-padding text-center" id="get-started">
-        <div class="container">
+    <section class="get-started has-padding text-center wp14" id="get-started">
+        <div class="container" id="contacto">
             <div class="row">
                 <div class="col-md-4 col-md-offset-4 col-sm-12 col-xs-12">
                     <form method="post" class="form-contact">
@@ -425,7 +390,8 @@
     <script src="js/min/retina.min.js"></script>
     <script src="js/min/jquery.waypoints.min.js"></script>
     <script src="js/min/flickity.pkgd.min.js"></script>
-    <script src="js/min/scripts-min.js"></script>
+    <!-- <script src="js/min/scripts-min.js"></script> -->
+    <script src="js/scripts.js"></script>
 
 </body>
 
